# mini-crm

./: docker-compose.yaml  pyproject.toml
app/: config.py  database.py  main.py
app/auth/: router.py
app/models/: auth.py  contact.py  deal.py  enum.py  task.py  user.py
app/schemas/: auth.py  user.py
app/security/: jwt_password.py  jwt_utils.py
app/services/: auth_service.py
app/users/: users.py
app/utils/: rate_limiter.py
certs/: jwt-private.pem  jwt-public.pem
migrations/: env.py
migrations/versions/: 9cd536373024_.py  b1e43209f49f_initial_gen.py
src/: config.py  db.py  main.py
