[project]
name = "mini-crm"
version = "0.1.0"
description = ""
authors = [
    {name = "Abzal",email = "k4bdoldaev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic[email] (>=2.13.1,<3.0.0)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

